<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_felt_background"
    tools:context=".ui.main.todo.TodoFragment">

    <TextView
        style="@style/WhatsNextTitle"
        android:id="@+id/whatsNextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_next"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/WhatsNextDesc"
        android:id="@+id/whatsNextDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_next_desc"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whatsNextTitle" />


    <TextView
        style="@style/WhatsNextDesc"
        android:id="@+id/feedback_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:layout_marginTop="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/feedback_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whatsNextDesc"
        />


    <Button
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>